# wwi-data-platform

./: .envrc.sample  .gitignore  .tool-versions  Dockerfile  LICENSE  Makefile  README.md  deploy-all.sh  prefect-daemon.yaml  prefect.toml  prefect.yaml  pyproject.toml  setup.sh  undeploy.py
.prefect/: profiles.toml
dbt/: dbt_project.yml
deployment/data/: init_db.sh
deployment/database/: init_db.sh  postgresql.conf
deployment/docker_compose/: docker-compose.dev.yaml
pipelines/: Dockerfile  requirements.txt
pipelines/flows/: say_hello.py  serve_retrieve_github_stars.py
