[project]
name = "wwi-data-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dbt-bigquery>=1.9.0",
    "dbt-core>=1.9.1",
    "dbt-extractor>=0.5.1",
    "dlt>=1.5.0",
    "prefect>=3.1.8",
    "prefect-dbt>=0.6.4",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
