[project]
name = "wwi-data-platform"
version = "0.1.0"
description = "Side project building a data platform with dataset WideWorldImporters. Using prefect, dbt, bigquery, holistics."
authors = [{ name = "lelouvincx", email = "dinhminhchinh3357@gmail.com" }]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

dependencies = [
  "prefect>=3.2.7",
  "dbt-bigquery>=1.9.1",
  "dbt-core>=1.9.2",
  "prefect-dbt[bigquery]>=0.6.6",
  "dlt>=1.7.0",
  "dbt-extractor>=0.5.1",
  "psycopg2-binary>=2.9.10",
  "asyncpg>=0.30.0",
]

[dependency-groups]
dev = ["pre-commit>=4.1.0", "pytest>=8.3.4", "ruff>=0.9.7"]
